--- a/config.yaml
+++ b/config.yaml
@@ -3,21 +3,21 @@
 
 common:
   data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid']
-  hpo : false #hpo = Hyperparameter optimisation true or false
+  hpo : true #hpo = Hyperparameter optimisation true or false
   dataset : fashionmnist #data_set = data set used  one among [fashionmnist,mnist,]
   target_acc : 0.91
 
 server:
-  max_rounds : 111
+  max_rounds : 1100
   address : 203.255.77.220
   min_fit_clients: 10
   min_avalaible_clients : 20
   strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
 
 client:
-  epochs : 11
+  epochs : 21
   batch_size : 32
-  lr: 0.0001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
+  lr: 0.001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
 
 
 
