--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 common:
   data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid']
-  hpo : false #hpo = Hyperparameter optimisation true or false
+  hpo : true #hpo = Hyperparameter optimisation true or false
   dataset : fashionmnist #data_set = data set used  one among [fashionmnist,mnist,]
   target_acc : 0.91
 
@@ -15,7 +15,7 @@ server:
   strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
 
 client:
-  epochs : 16
+  epochs : 21
   batch_size : 32
   lr: 0.001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
 
