--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ common:
   dataset : fashionmnist #data_set = data set used  one among [fashionmnist,mnist,]
   target_acc : 0.91
   model : simplednn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet]
+  optimizer : adam # one among [sgd,adam]
 
 server:
   max_rounds : 1100
