--- a/config.yaml
+++ b/config.yaml
@@ -2,22 +2,23 @@
 # config
 
 common:
-  data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid']
+  data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid','dirichlet_niid']
   hpo : false #hpo = Hyperparameter optimisation true or false
-  dataset : fashionmnist #data_set = data set used  one among [fashionmnist,mnist,]
-  target_acc : 0.91
-  model : simplednn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet]
+  dataset : cifar-10 #data_set = data set used  one among [fashionmnist,mnist,cifar-10]
+  dirichlet_alpha : 0.5 #dirichlet concentration parameter
+  target_acc : 0.93
+  model : fedavgcnn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet,fedavgcnn,fmcnn]
   optimizer : sgd # one among [sgd,adam]
 
 server:
-  max_rounds : 1100
-  address : 203.255.93.30
-  min_fit_clients: 10
-  min_avalaible_clients : 20
+  max_rounds : 111
+  address : 203.255.77.246
+  min_fit_clients: 5
+  min_avalaible_clients : 10
   strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
 
 client:
-  epochs : 21
+  epochs : 6
   batch_size : 32
   lr: 0.001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
 
