adds support for flwr simulation

--- a/config.yaml
+++ b/config.yaml
@@ -3,24 +3,28 @@
 
 common:
   data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid','dirichlet_niid']
-  hpo : false #hpo = Hyperparameter optimisation true or false
+  hpo : true #hpo = Hyperparameter optimisation true or false
   dataset : cifar-10 #data_set = data set used  one among [fashionmnist,mnist,cifar-10]
   dirichlet_alpha : 0.5 #dirichlet concentration parameter
   target_acc : 0.93
   model : fedavgcnn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet,fedavgcnn,fmcnn]
   optimizer : sgd # one among [sgd,adam]
+  simulation : true
 
 server:
-  max_rounds : 111
+  max_rounds : 3
   address : 203.255.77.246
-  min_fit_clients: 5
-  min_avalaible_clients : 10
+  fraction_fit : 0.5
+  min_fit_clients: 4
+  fraction_evaluate : 0.3
+  min_avalaible_clients : 8  # total number of clients participating in training
   strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
 
 client:
-  epochs : 6
+  epochs : 2
   batch_size : 32
   lr: 0.001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
+  save_train_res : false
 
 
 
