--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@ venv-flwr/
 *.ipynb
 plot_style.txt
 .ipynb_checkpoints
-*__pycache__
+__pycache__/
 *.pyc
-*.__pycache__
 run_clients.sh
 config.yaml
