--- a/config.yaml
+++ b/config.yaml
@@ -4,27 +4,27 @@
 common:
   data_type : iid  #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid','dirichlet_niid']
   hpo : true #hpo = Hyperparameter optimisation true or false
-  dataset : cifar-10 #data_set = data set used  one among [fashionmnist,mnist,cifar-10]
+  dataset : fashionmnist #data_set = data set used  one among [fashionmnist,mnist,cifar-10]
   dirichlet_alpha : 0.5 #dirichlet concentration parameter
-  target_acc : 0.93
+  target_acc : 0.91
   model : fedavgcnn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet,fedavgcnn,fmcnn]
-  optimizer : sgd # one among [sgd,adam]
+  optimizer : adam # one among [sgd,adam]
   simulation : true
 
 server:
-  max_rounds : 1
+  max_rounds : 111
   address : 203.255.77.246
   fraction_fit : 0.5
-  min_fit_clients: 4
-  fraction_evaluate : 0.3
-  min_avalaible_clients : 8  # total number of clients participating in training
-  strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
+  min_fit_clients: 10
+  min_avalaible_clients : 20  # total number of clients participating in training
+  fraction_evaluate : 0.2
+  strategy : fedavgm #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm']
 
 client:
-  epochs : 1
+  epochs : 11
   batch_size : 32
   lr: 0.001  #[0.0001,0.001,0.005,0.01,0.1,0.2]
-  save_train_res : false
+  save_train_res : true
 
 
 
