--- a/config.yaml
+++ b/config.yaml
@@ -4,31 +4,31 @@
 common:
   data_type : iid #data_type = data distribution one among ['iid','one-class-niid','one-class-niid-majority','two-class-niid','dirichlet-niid']
   hpo : false #hpo = Hyperparameter optimisation true or false
-  dataset : shakespeare #data_set = data set used  one among [fashionmnist,mnist,cifar-10,shakespeare ]
+  dataset : violation-detection #data_set = data set used  one among [fashionmnist,mnist,cifar-10,shakespeare,violation-detection ]
   dirichlet_alpha : 0.11 #dirichlet concentration parameter
   target_acc : 0.80
-  model : lstm-shakespeare #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet,fedavgcnn,fmcnn,resnet-18,lstm-shakespeare]
+  model : fedavgcnn #one among [mobilenetv2, simplecnn, simplednn, kerasexpcnn, mnistcnn,efficientnet,fedavgcnn,fmcnn,resnet-18,lstm-shakespeare]
   optimizer : sgd # one among [sgd,adam]
   simulation : true
   verbose : 1 #[0,1,2] verbosity of model training or evaluvation (0 = silent, 1 = progress bar, 2 = one line per epoch)
   multi_node: false # use multi-node setup or not
 
 server:
-  max_rounds : 11
+  max_rounds : 5
   address : 127.0.0.1
-  fraction_fit : 0.05
+  fraction_fit : 0.5
   min_fit_clients: 2
-  min_avalaible_clients : 20  # total number of clients participating in training 
+  min_avalaible_clients : 5  # total number of clients participating in training 
   fraction_evaluate : 0.025
   strategy : fedavg #Strategy : choices=['fedavg', 'fedyogi', 'fedadagrad', 'fedavgm','fedprox']
 
 client:
-  epochs : 1
-  batch_size : 64
+  epochs : 2
+  batch_size : 32
   lr: 0.01  #[0.0001,0.001,0.005,0.01,0.1,0.2]
   save_train_res : True
   gpu : false  # True or False, Use GPU for training or not.
-  num_cpus : 1  # no. of CPU cores that are assigned for each actor
+  num_cpus : 5  # no. of CPU cores that are assigned for each actor
   num_gpus : 0.0  # no. of GPU that are assigned for each actor (it can be fraction value as well)
 
 fedex:
@@ -37,9 +37,14 @@ fedex:
 
 shakespeare:
   sequence_length : 100 # the length of input sequences characters
-  vocab_size : 78  # check vocab size of your dataset (actual vocab size +1 )
-  train_file: path_to_shakespare_train_file
-  test_file: path_to_shakespare_test_file
+  vocab_size : 87  # check vocab size of your dataset (actual vocab size +1 )
+  train_file: /home/mak36/Desktop/curr_work/FLNCLAB/datasets/shakespeare/train/shakespare_train_processed.pkl
+  test_file: /home/mak36/Desktop/curr_work/FLNCLAB/datasets/shakespeare/test/shakespare_test_processed.pkl
+
+violation-detection:
+  data_root : /home/mak36/Desktop/curr_work/FLNCLAB/datasets/violation_detection_v2
+  image_size : 128
+  num_classes : 2
 
 
 
