--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ hyperparam-logs/
 datasets/
 *.json
 *.pkl
+./preprocessing/get_preprocess_shakespeare_bk.pyc
+./preprocessing/get_shakespeare_gdrive.py
+./preprocessing/get_violation_detection_data.sh
